--- a/mapapp/templates/mapapp/c_offset.html
+++ b/mapapp/templates/mapapp/c_offset.html
@@ -58,8 +58,8 @@
 						<div class="col p-4 d-flex flex-column position-static " >
 							<strong class="d-inline-block mb-2 text-primary ">Calculating Your Carbon Footprint... </strong>
               <!-- <h3 class="mb-0 ">Play a video game</h3> -->
-              <p class="mb-auto ">    <h4> Carbon Foot Print: {{carbon_footprint}} </h4>
-    <h4> Carbon Offset Cost: {{carbon_offset_cost}} </h4></p>
+              <p class="mb-auto ">    <h4> Carbon Foot Print: {{carbon_footprint}} Kg of CO2</h4>
+    <h4> Carbon Offset Cost: {{carbon_offset_cost}} Ether</h4></p>
               <a href="https://carbonfund.org/donate/" target="_blank" class="stretched-link">Let's Donate!</a>
               
               
