--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -17,7 +17,7 @@
   
   <div class="container" align="center">
     <img src="{% static 'images/logo.png' %}" style="width:300px;height:280px; margin-top:30px;">
-    <h1>Green Map - Let's work for a Better and sustainable future!</h1>
+   <h1>Eco Map - Let's work for a Better and sustainable future with Crypto Currencies!</h1>
 
   <div class="container h-100">
     <div class="d-flex justify-content-center h-100">
